# oauth-mocks

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE.md  pyproject.toml
.github/workflows/: release-check.yml  release.yml  tests.yml
github/: .gitignore  README.md  main.py  pyproject.toml
github/.github/workflows/: deploy.tml  tests.yml
github/github_oauth_mock/: __init__.py  app.py  auth.py  models.py
github/templates/: authorize.html  index.html
github/tests/: test_oauth.py
google/: README.md  main.py  pyproject.toml
google/google_oauth_mock/: __init__.py  app.py  auth.py  models.py
google/templates/: authorize.html  index.html
google/tests/: test_google_oauth.py
src/oauth_mocks/: __init__.py  _runner.py  cli.py
src/oauth_mocks/github/: __init__.py  app.py  auth.py  models.py
src/oauth_mocks/github/templates/: authorize.html  index.html
src/oauth_mocks/google/: __init__.py  app.py  auth.py  models.py
src/oauth_mocks/google/templates/: authorize.html  index.html
tests/: smoke_wheel.py  test_cli.py  test_runner.py  test_runtime.py
